ui/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: admin-ui
  labels:
    app: admin-ui
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: admin-ui
    spec:
      containers:
      - image: abiosoft/caddy:latest
        name: admin-ui
        ports:
          # TODO: we want ports 80 and 443 instead
          - containerPort: 2015
        volumeMounts:
          - mountPath: /etc/Caddyfile # mount caddy-conf volume to /etc
            subPath: Caddyfile
            readOnly: true 
            name: caddy-conf
        resources:
          limits:
            cpu: 150m
            memory: 250Mi
      volumes:
        - name: caddy-conf
          configMap:
            name: caddy-conf # place ConfigMap `caddy-conf` on /etc
            items:
              - key: Caddyfile
                path: Caddyfile
