ui/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: admin-ui
  namespace: default
  labels:
    app: admin-ui
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
    # - name: http
    #   protocol: TCP
    #   port: 80
    #   targetPort: 80
    # - name: https
    #   protocol: TCP
    #   port: 443
    #   targetPort: 443
  selector:
    app: admin-ui
  type: ClusterIP
