ui/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: admin-ui
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: admin-ui
              servicePort: 8080
